fixing sponsor spacing

--- a/src/components/entities/Sponsor/style.scss
+++ b/src/components/entities/Sponsor/style.scss
@@ -1,6 +1,11 @@
 .sponsor {
-  display:flex;
+  display: flex;
   align-items: center;
+
+  a {
+    margin: 0 auto;
+  }
+
   img {
     max-width: 80%;
   }
@@ -8,6 +13,7 @@
 
 .sponsor--diamond {
   width: 30%;
+
   @media (max-width: 768px) {
     width: 50%;
   }
@@ -15,6 +21,7 @@
 
 .sponsor--gold {
   width: 25%;
+
   @media (max-width: 768px) {
     width: 40%;
   }
@@ -22,6 +29,7 @@
 
 .sponsor--silver {
   width: 20%;
+
   @media (max-width: 768px) {
     width: 30%;
   }
@@ -29,6 +37,7 @@
 
 .sponsor--bronze {
   width: 15%;
+
   @media (max-width: 768px) {
     width: 20%;
   }
